# ramsey-number-5

./: .clang-format  .gitignore  .vimrc
test-1-brute-force-straight-forward/: .vimrc  Makefile  main.cpp  prereqs.hpp  test-1.sh
test-2/: Makefile  main.cpp  prereqs.hpp  test-2.sh
test-2-more-compile-time-and-bitmasks/: build.sh  config.hpp  prereqs.hpp  test-2.sh
test-3/: Makefile  README.txt  main.cpp  prereqs.hpp  test-3.sh
test-3-no-compile-time-coloring-enumeration-tree-pruning/: Makefile  README.txt  main.cpp  prereqs.hpp
test-4-counting-automorphism-groups/: geng  test-4.sh
test-5/: Makefile  README.txt  build.sh  constexpr.hpp  main.cpp
test-5-more-compile-time-and-column-major-adjacency-matrices/: README.txt  check.hpp  config.hpp  main.cpp  prereqs.cpp  prereqs.hpp  test-5.sh
test-5-ornl-gpu-hackathon/: Makefile  README.txt  build.sh  check.cpp  config.hpp  main.cpp  prereqs.hpp
test-6/: CMakeLists.txt  README.txt  adjacencymatrix.cpp  adjacencymatrix.hpp  adjacencymatrixindexer.hpp  main.cpp  prereqs.hpp  test-5-build.sh  test-5-check.cpp  test-5-check.hpp  test-5-config.hpp  test-5-new.cpp  test-5-new.sh  test-5-prereqs.hpp  test_adjacencymatrix.cpp  test_adjacencymatrixindexer.cpp
test-7/: CMakeLists.txt  README.txt  adjacencymatrix-prereqs.hpp  adjacencymatrix.hpp  adjacencymatrixindexer.hpp  build.sh  check.cpp  check.hpp  config.hpp  prereqs.hpp  test-7.cpp  test-7.sh  test_adjacencymatrix.cpp  test_test-7.cpp  unique.hpp
test-8/: CMakeLists.txt  README.txt  adjacencymatrix.hpp  adjacencymatrixindexer.hpp  bench.sh  build.sh  checkramseygraphcount.hpp  config.hpp  packeduinttuple.hpp  prereqs.hpp  test-8.cpp  test-8.hpp  test_adjacencymatrix.cpp  test_adjacencymatrixindexer.cpp  test_packeduinttuple.cpp  test_test-8.cpp  test_test-8.cu
